# arxlang-jupyter-kernel

./: .makim.yaml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yml
conda/: release.yaml
src/arxlang_jupyter_kernel/: __init__.py  __main__.py  compile_run.py  install.py  kernel.py  session.py
src/arxlang_jupyter_kernel/kernelspec/: kernel.json
tests/: test_compile_run.py  test_install.py  test_kernel.py  test_main.py  test_session.py  test_smoke.py
