[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arxlang-jupyter-kernel"
version = "0.1.0"  # semantic-release
description = "Jupyter kernel wrapper for the ArxLang compiled language"
readme = "README.md"
license = "MIT"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
homepage = "https://github.com/arxlang/arxlang-jupyter-kernel"
repository = "https://github.com/arxlang/arxlang-jupyter-kernel"
keywords = ["arx", "jupyter", "kernel", "llvm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Jupyter",
  "Topic :: Software Development :: Compilers",
]
packages = [{ include = "arxlang_jupyter_kernel", from = "src" }]
include = [
  { path = "src/arxlang_jupyter_kernel/kernelspec/kernel.json", format = ["sdist", "wheel"] },
]

[tool.poetry.urls]
Issues = "https://github.com/arxlang/arxlang-jupyter-kernel/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ipykernel = ">=6.29"
jupyter-client = ">=8.6"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.8"
pytest = ">=8.0"
ruff = ">=0.5"
douki = "^0.11.0"
pre-commit = "^4.5.1"
makim = "1.27.0"

[tool.poetry.scripts]
arxlang-kernel-install = "arxlang_jupyter_kernel.install:main"

[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src", "tests"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
